# Proyecto-de-grado---cristal-de-plomo

./: README.md
crystalg4/: CMakeLists.txt  leadG.cc
crystalg4/analysis/: charge_vs_energy.py  charge_vs_npe.py  charge_vs_npe_fit.py  post_pr.py  post_pr_charge.py  post_pr_comparar.py  post_pr_pulse.py  resolution_energy.py
crystalg4/include/: action.hh  analysis.hh  construction.hh  event.hh  generator.hh  lg_hit.hh  lgdetector.hh  physics.hh  pmt.hh  pmtHit.hh  run.hh  stepping.hh
crystalg4/macros/: run.mac  vis.mac
crystalg4/src/: action.cc  analysis.cc  construction.cc  event.cc  generator.cc  lg_hit.cc  lgdetector.cc  physics.cc  pmt.cc  pmtHit.cc  run.cc  stepping.cc
